css contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -538,7 +538,7 @@ select, #amount {
 }
 
 .loss {
-    color: #b00020
+    color: #92001b
 }
 
 .summary {
